# nure-schedule

./: Cargo.toml
client/linux/: Cargo.toml
core/: Cargo.toml
core/.sqlx/: query-1820cd12bdcf228a551192978d67deb03aad0b198e39ca0c8236896abb8103ae.json  query-2d10bf6783292a956789402cc655717eb4277281a71c1d38f059b75c19b62bea.json  query-8519e9d82ea13f0ccdb7e1f662ab48ed0c7246bb0f9330a0a86e6a216a64d860.json  query-a7636d1b191a7e5cd80c73678a2aa9c805e3bbb579891b7daae6a396220fa3f1.json  query-bac5cb520da6fdc7a88d82dcd8f995730e2cc6c162782cbd926aced5b1561cab.json  query-ffca78dc2247f75c8bf558cbefb359af9635e50e67cb30bacb6706f0f8229746.json
core/assets/: schema.sql
core/src/: data.rs  fetcher.rs  lib.rs
core/src/fetcher/: mindenit.rs
core/src/models/: auditorium.rs  event.rs  event_kind.rs  subject.rs
data/: Cargo.toml  build.rs  schema.sql
data/.sqlx/: query-0e718f32fd87c96e69bd4ab032e8eb92a8b3e01a9a83729b15caf7ce134e7c21.json  query-433e1196e48ea5b7eea5d1175a3a5af414112f1315ada3e7a349e0fde01d8304.json  query-4f826b8e5f6b87a13d40e5669252df00dcd9a3667e41bb883a5ad0181f21bdb6.json  query-52a1657cc98542527f377ef65fe91655991cf2dc73cf22224a4d27c66e835869.json  query-e959e44cdc136d2730b23f7473a912eed1bb140f7df746c78bd7b930403b4a0a.json  query-f176b71849d3e86bcebfb87164fdd41ddafb2bc86061e7a6c991836cc87af347.json  query-fbe265ee00191fcd364733036ba1e401b73e1443d0635bc378a45853a2ef831d.json
data/src/: error.rs  filter.rs  lib.rs
data/src/entity/: auditorium.rs  event.rs  mod.rs  teacher.rs
desktop-linux/: Cargo.toml
fetcher/: .gitignore  Cargo.toml  build.rs  fetch-tests.sh
fetcher/src/: array_to_map.rs  array_to_set.rs  error.rs  fetcher_agent.rs  lib.rs  mindenit.rs  models.rs
fetcher/src/mindenit/: parsers.rs
fetcher/src/mindenit/parsers/: auditorium.rs  group.rs  subject.rs  teacher.rs  timetable.rs
model/: Cargo.toml
model/src/: auditorium.rs  event.rs  group.rs  lib.rs  subject.rs  teacher.rs
proc/: Cargo.toml
proc/src/: lib.rs
proc/tests/: partial_borrow_tests.rs
schedule/core/: Cargo.toml
schedule/core/src/: lib.rs  state.rs
schedule/core/src/fetcher/: mindenit.rs  mod.rs
schedule/core/src/models/: auditorium.rs  event_type.rs  group.rs  mod.rs  subject.rs  teacher.rs
schedule/data/: Cargo.toml  schema.sql
schedule/data/.sqlx/: query-1081013050c943abde124dd53198b3f34e7c0deb80ab698b2018387b22d35846.json  query-3e8f06fff4ac0816d4d2dc48111c4ce6ade61012f6bd78235a1538774028fe56.json  query-45ce9b6345b495dad499de69e2f00cc4f8c82165df8fcc5d83dcdce3f360edb8.json  query-71b67cd19d0ec0a3f6807675641f89637ce7854bc6d3ce062accfcc8d2bab536.json  query-82662c47645dae8ef198fb9a8b0725e1e608e03cbe4c7bf5cec352350a3b7691.json  query-826dd1cee39a34fcfb43b5d3ca07f972c9fd09d4dca018be9821890250220ec9.json  query-a7ad61edf0abacbc645563f150d846c463ededa76618d2b67ac3207c3841bab0.json  query-b7d08cac3bde746f8edd3a391e46d72616cd4a1f9c1282249a26a8f41bd5f9bc.json
schedule/data/src/: database.rs  filter.rs  lib.rs
schedule/data/src/entity/: auditorium.rs  event.rs  group.rs  subject.rs  teacher.rs
schedule/fetch/: Cargo.toml
schedule/fetch/src/: error.rs  lib.rs
schedule/fetch/src/models/: event.rs  group.rs
schedule/state/: Cargo.toml
schedule/storage/: Cargo.toml
