[workspace]
resolver = "3"
members = ["schedule/*", "client/*"]

[workspace.package]
edition = "2024"
version = "0.0.0"
authors = ["Linerds"]
description = "Part of nure-schedule"
# TODO? GPL-3.0-or-later
license = "GPL-3.0-only"
keywords = ["NURE"]
# https://crates.io/category_slugs
categories = ["api-bindings"]
# TODO homepage?
homepage = "https://sh.mindenit.org/"
repository = "https://github.com/linerds/nure-schedule"


[profile.release]
lto = "fat" # use mold or something

[profile.dev]
# lto = "thin"
opt-level = 1
# codegen-backend = "cranelift" # NOTE: requires nightly

[profile.dev.package."*"]
opt-level = 3


# https://blessed.rs/crates
[workspace.dependencies]
thiserror = "2.0.12"
chrono-tz = "0.10.3"
chrono = { version = "0.4.41", default-features = false, features = [
  "std",
  "clock",
  # "serde",
] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
