# https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
resolver = "3"
members = ["data", "model", "fetcher", "proc"]

[workspace.package]
edition = "2024"
version = "0.0.0"
description = "Part of nure-schedule"
# TODO? GPL-3.0-or-later
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["NURE"]
# https://crates.io/category_slugs
categories = ["api-bindings"]
# TODO homepage?
homepage = "https://sh.mindenit.org/"
repository = "https://github.com/linerds/nure-schedule"


[profile.release]
lto = "fat" # use mold or something

[profile.dev]
# lto = "thin"
opt-level = 1
# codegen-backend = "cranelift" # NOTE: requires nightly

[profile.dev.package."*"]
opt-level = 3

# Compile-time verified queries are heavy.
# [profile.dev.package.sqlx-macros]
# opt-level = 3


# https://blessed.rs/crates
# Locking versions here
[workspace.dependencies]
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# thiserror = "2.0"
# chrono-tz = "0.10"
# chrono = { version = "0.4.41", default-features = false, features = [
#   "std",
#   "clock",
#   # "serde",
# ] }
