[package]
name = "schedule-data"
description = "Data persistence and filtering."
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
error_set = { version = "0.8.5", features = ["log"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
# NOTE sqlx features:
# * chrono: out of scope of this crate
# * migrate: may be useful for tests: https://docs.rs/sqlx/latest/sqlx/attr.test.html
