[package]
name = "schedule-fetcher"
version = "0.0.1"
description = "Data retrieval from APIs."
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
error_set = { version = "0.8", features = ["log"] }

# Fetch
ureq = { version = "3.0", features = ["socks-proxy"] } # TODO? "cookies"

# Parse
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# derive_more = { version = "2.0", features = ["into", "from"] }
