[package]
name = "schedule-client-linux"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
schedule-state = { path = "../../schedule/state" }
