[package]
name = "schedule-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true
ureq = { version = "3.0", features = ["json", "cookies", "socks-proxy"] }
