[package]
name = "schedule-data"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  # "chrono",
  # "migrate", # TODO: For tests: https://docs.rs/sqlx/latest/sqlx/attr.test.html
] }

# derive_more = { version = "2", features = ["deref", "into"] }

# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# thiserror = "2.0"
# chrono-tz = { version = "1.0", features = ["serde"] }
# chrono = { version = "0.4.41", default-features = false, features = [
#   "std",
#   "clock",
#   "serde",
# ] }
