[package]
name = "schedule-state"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
schedule-core = { path = "../core" }
schedule-fetch = { path = "../fetch" }
schedule-storage = { path = "../storage" }
thiserror.workspace = true
