[package]
name = "schedule-storage"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
schedule-core = { path = "../core" }
sqlx.workspace = true
thiserror.workspace = true
