[package]
name = "schedule-storage"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
schedule-core = { path = "../core" }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror.workspace = true
